Se modificó index.hmtl

--- a/recetas/index.html
+++ b/recetas/index.html
@@ -20,3 +20,13 @@
 </P>
 </BODY>
 </HTML>
+
+H2>Méxcio</H2>
+<P>
+	<UL>
+		<LI type="circle"><A ID="enlace4" HREF="../recetas/Mexico/pozole.html">Pozole</A><BR></LI>
+		
+	</UL>
+</P>
+</BODY>
+</HTML>
